# slates

./: .gitignore  COPYING  DE Entwurf.odg  HACKING  Makefile.am  README  TODO  WM Draft.odg  configure.ac
src/: Makefile.am  border.cc  border.h  configbackend.cc  configbackend.h  configslate.cc  configslate.h  confreader.cc  confreader.h  constdef.h  controller.cc  controller.h  emptyslate.cc  emptyslate.h  emptyslateo.cc  emptyslateo.h  groupslate.cpp  groupslate.h  gtkmmbackend.cc  gtkmmbackend.h  lockslate.cc  lockslate.cpp  lockslate.h  lockslateo.cc  lockslateo.h  main.cc  master.cc  master.h  masterslate.cc  masterslate.h  messages.cc  messages.h  sdlbackend.cc  sdlbackend.h  slate.cc  slate.h  slatearea.cc  slatearea.h  slateareascreen.cc  slateareascreen.h  (+23 more)
src/Xbackend/: used sources  xbackend.cc  xbackend.h  xemptyslate.cc  xemptyslate.h  xlockslate.cc  xlockslate.cpp  xlockslate.h  xroutines.cc  xroutines.h  xslatearea.cc  xslatearea.cpp  xslatearea.h  xsysslate.cc  xsysslate.h  xviewport.cc  xviewport.h  xwindowslate.cpp  xwindowslate.h
src/gtkmmbackend/: Makefile.am  gtkmm_emptyslateo.cc  gtkmm_emptyslateo.h  gtkmm_lockslateo.cc  gtkmm_lockslateo.h  gtkmm_screenobject.cc  gtkmm_screenobject.h  gtkmm_slate.cc  gtkmm_slate.h  gtkmm_slatearea.cc  gtkmm_slatearea.h  gtkmm_sysslateo.cc  gtkmm_sysslateo.h  gtkmm_viewport.cc  gtkmm_viewport.h  gtkmm_windowslateo.cc  gtkmm_windowslateo.h  gtkmmbackend.cc  gtkmmbackend.h
src/oldstuff/: controller.cc  controller.h  masterslate.cc  masterslate.h  messages.h  messagestack.cc  messagestack.h  slate.h  slateobject.cc  slaveslate.h  widgets.cc
src/sdlbackend/: Makefile.am  sdl_emptyslateo.cc  sdl_emptyslateo.h  sdl_lockslateo.cc  sdl_lockslateo.h  sdl_screenobject.cc  sdl_screenobject.h  sdl_slate.cc  sdl_slate.h  sdl_slatearea.cc  sdl_slatearea.h  sdl_slateotypes.cc  sdl_slateotypes.h  sdl_sysslateo.cc  sdl_sysslateo.h  sdl_viewport.cc  sdl_viewport.h  sdl_windowslateo.cc  sdl_windowslateo.h  sdlbackend.cc  sdlbackend.cpp  sdlbackend.h  sdlemptyslate.cc  sdlemptyslate.cpp  sdlemptyslate.h  sdllockslate.cc  sdllockslate.h  sdlroutines.cc  sdlroutines.cpp  sdlroutines.h  sdlslatearea.cc  sdlslatearea.cpp  sdlslatearea.h  sdlsysslate.cc  sdlviewport.cc  sdlviewport.cpp  sdlviewport.h  sdlwindowslate.cc  sdlwindowslate.h
src/slatetypes/: configslate.cc  emptyslate.cc  emptyslate.h  groupslate.cc  groupslate.h  lockslate.cc  lockslate.h  sysslate.cc  sysslate.h  windowslate.cc  windowslate.h
src/testbackend/: Makefile.am  temptyslate.cc  temptyslate.cpp  temptyslate.h  temptyslateo.cc  temptyslateo.h  testbackend.cc  testbackend.h  tlockslate.cc  tlockslate.cpp  tlockslate.h  tlockslateo.cc  tlockslateo.h  tscreenobject.cc  tscreenobject.h  tslate.cc  tslatearea.cc  tslatearea.h  tslateareascreen.cc  tslateareascreen.h  tsysslate.cc  tsysslate.h  tsysslateo.cc  tsysslateo.h  tviewport.cc  tviewport.cpp  tviewport.h  twindowslate.cc  twindowslate.cpp  twindowslate.h  twindowslateo.cc  twindowslateo.h
