

#AM_CPPFLAGS = \
#	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
#	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
#	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
#    $(GTKMM_CFLAGS) \
#	$(SLATES_CFLAGS)

#gtkmmbackend_LIB = gtkmmown.la

#gtkmmbackend_HEADERS = gtkmmbackend.cc \
#	gtkmmbackend.h
#gtkmmbackend_LDADD = $(SLATES_LIBS) \
#    $(GTKMM_LIBS)
